# Face

./: build.gradle  gradle.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wzjing/face/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: fragment_shader.glsl
app/src/main/cpp/: GLESView.cpp  GLESView.h  native-lib.cpp  native-lib.h  native-util.cpp  native-util.h  native-utils.cpp  native-utils.h
app/src/main/cpp/opencv/: opencv-lib.cpp  opencv-lib.h
app/src/main/java/com/wzjing/face/: CameraActivity.kt  MainActivity.kt  MyGLSurfaceView.kt  MyRenderer.kt  MyView.kt  OpenCVCameraActivity.kt  Test.java
app/src/main/java/com/wzjing/face/customcamera/: CameraActivity.kt  MyGLSurfaceView.kt  MyRenderer.kt
app/src/main/java/com/wzjing/face/opencvcamera/: CVView.kt  CamManager.kt  CameraActivity.kt  CameraNew.kt  CameraOld.kt  CameraView.kt  CameraViewActivity.kt  GLCameraView.kt  GLESView.kt  Mat.kt  MyRenderer.kt  OpenCVCameraActivity.kt  OriginCameraActivity.kt  Utils.kt
app/src/main/res/animator/: state_list_animator.xml
app/src/main/res/drawable/: button_selector_rect.xml  ic_opencv.xml
app/src/main/res/drawable-hdpi/: button_selector_circle.xml
app/src/main/res/layout/: activity_camera.xml  activity_cameraview.xml  activity_main.xml
app/src/main/res/layout-v21/: activity_camera.xml  activity_cameraview.xml  activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-sw820dp/: dimens.xml
app/src/main/res/values-v21/: styles.xml
app/src/test/java/com/wzjing/face/: ExampleUnitTest.kt  JUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary320/: .gitignore  build.gradle
openCVLibrary320/src/main/: AndroidManifest.xml
openCVLibrary320/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  FpsMeter.java
paint/: .gitignore  CMakeLists.txt  build.gradle
paint/src/main/: AndroidManifest.xml
paint/src/main/cpp/: native-lib.cpp  native-lib.h
paint/src/main/java/com/wzjing/paint/: GLESView.kt  MainActivity.kt  MyRenderer.kt  MySurfaceView.kt
paint/src/test/java/com/wzjing/paint/: ExampleUnitTest.kt
